# pyhound

./: .gitignore  BENCHMARKS_AND_COMPARISON.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  INSTALL.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: ARCHITECTURE.md  GUIDE.md
docs/strategy/: PyHound_FINAL_PRODUCT.md  PyHound_LAUNCH_CHECKLIST.md
pyhound/: __init__.py  comparison.py  database.py  diagnosis.py  hound.py  scorer.py
pyvectorsearch/: __init__.py  hound.py
src/: lib.rs  metrics.rs
tests/: test_diagnosis.py  test_hound.py
