[package]
name = "pyhound-core"
version = "0.1.0"
edition = "2021"
authors = ["Georgi Mammen Mullassery <mullassery@gmail.com>"]
license = "MIT"
description = "Rust core for PyHound - retrieval diagnostics engine"

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "pyhound_core"
crate-type = ["cdylib"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
